--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1029,6 +1029,8 @@ html {
 	-webkit-box-shadow: 2px 2px 5px #f2f2f2;
 	-moz-box-shadow: 2px 2px 5px #f2f2f2;
 	box-shadow: 2px 2px 5px #f2f2f2
+	width: 150px;
+	height: 150px;
 }
 
 .avatar img.round {
