--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -301,7 +301,7 @@ html {
 
 #logo {
 	height: 4em;
-	background: url('../images/logo.svg?ab') center no-repeat;
+	background: url('../images/logo.svg?azaqqvaawefeqqaaty') center no-repeat;
 	text-indent: -119988px;
 	overflow: hidden;
 	text-align: left
