--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -476,7 +476,7 @@ html {
 @media (min-width: 48em) {
 	#about {
 		min-height: 100%;
-		background: url('../images/sitcon_jiang0120.png?1394417873') no-repeat 95% 0%
+		background: url('../images/hero.png') no-repeat 95% 0%
 	}
 }
 
@@ -484,7 +484,7 @@ html {
 	#about {
 		height: 100%;
 		max-height: 100%;
-		background: url('../images/sitcon_jiang0120.png?1394417873') no-repeat 85% 115%
+		background: url('../images/hero.png') no-repeat 85% 115%
 	}
 }
 
@@ -521,13 +521,13 @@ html {
 
 @media (min-width: 48em) {
 	#about .overlay.cg {
-		background: url('../images/sitcon_jiang_line0120.png?1394417873') no-repeat 95% top
+		background: url('../images/hero_line.png') no-repeat 95% top
 	}
 }
 
 @media (min-width: 64em) {
 	#about .overlay.cg {
-		background: url('../images/sitcon_jiang_line0120.png?1394417873') no-repeat 85% 115%
+		background: url('../images/hero_line.png') no-repeat 85% 115%
 	}
 }
 
