--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -302,6 +302,7 @@ html {
 #logo {
 	height: 4em;
 	background: url('../images/logo.png') center no-repeat;
+	background-size: contain;
 	text-indent: -119988px;
 	overflow: hidden;
 	text-align: left
